--- a/services.html
+++ b/services.html
@@ -343,7 +343,7 @@
                  data-item-price="145"
                  data-item-url="https://thqcyberdivision.github.io/services.html"
                  data-item-description="4 vCPU, 16 GiB RAM, 1 x 150 NVMe SSD — isolated instance on reserved host">
-                Rent 2 vCPU Instance
+                Rent 4 vCPU Instance
               </a>
 
               <a class="btn snipcart-add-item" href="#"
@@ -352,7 +352,7 @@
                  data-item-price="290"
                  data-item-url="https://thqcyberdivision.github.io/services.html"
                  data-item-description="8 vCPU, 32 GiB RAM, 1 x 300 NVMe SSD — isolated instance on reserved host">
-                Rent 4 vCPU Instance
+                Rent 8 vCPU Instance
               </a>
 
               <a class="btn snipcart-add-item" href="#"
@@ -361,27 +361,28 @@
                  data-item-price="637.73"
                  data-item-url="https://thqcyberdivision.github.io/services.html"
                  data-item-description="16 vCPU, 64 GiB RAM, 2 x 300 NVMe SSD — isolated instance on reserved host">
-                Rent 8 vCPU Instance
+                Rent 16 vCPU Instance
               </a>
             </div>
           </div>
         </article>
 
-        <!-- Custom Software -->
-        <article class="card reveal" aria-labelledby="cs-title">
-          <div class="icon" aria-hidden="true">SW</div>
-          <h3 id="cs-title">Custom Software & Tooling</h3>
-          <p>Design and build bespoke software that complements CTI and operational workflows — analyst dashboards, automated enrichment pipelines, data ingestion connectors and automation playbooks.</p>
-          <ul>
-            <li>Secure-by-design development lifecycle</li>
-            <li>Integration with existing SIEM/SOAR & feeds</li>
-            <li>SaaS or self-hosted deployment options</li>
-          </ul>
-          <div class="meta">
-            <span style="margin-right:10px;color:var(--muted)">Scoping & prototypes available</span>
-            <a class="btn" href="mailto:thqcs@protonmail.com?subject=Custom Software Inquiry">Request Proposal</a>
-          </div>
-        </article>
+       <!-- Software License Key Requests -->
+<article class="card reveal" aria-labelledby="slk-title">
+  <div class="icon" aria-hidden="true">SW</div>
+  <h3 id="slk-title">Software License Key Requests</h3>
+  <p>Submit a request for a software license key you need. Our team will locate the license and provide it securely — delivery may take some time.</p>
+  <ul>
+    <li>Request for specific software licenses</li>
+    <li>Secure verification and delivery</li>
+    <li>Flexible options depending on availability</li>
+  </ul>
+  <div class="meta">
+    <span style="margin-right:10px;color:var(--muted)">Delivery times vary depending on software</span>
+    <a class="btn" href="mailto:thqcs@protonmail.com?subject=Software License Key Request">Request License</a>
+  </div>
+</article>
+
 
       </div>
     </section>
