--- a/services.html
+++ b/services.html
@@ -12,6 +12,44 @@
   <meta name="description" content="THQ Cyber Division provides professional Cyber Threat Intelligence, incident response advisory, secure Dedicated Hosts and Dedicated Instances rentals and bespoke custom software for security teams." />
   <meta name="keywords" content="cyber threat intelligence, threat feeds, malware analysis, incident response, dedicated hosts, dedicated instances, custom software, secure infrastructure" />
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.3.0/default/snipcart.css" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Cyber Threat Intelligence & Secure Services | THQ Cyber Division">
+  <meta property="og:description" content="Threat intelligence subscriptions, incident response advisory, malware analysis, secure dedicated hosts & instances and custom security software." />
+  <meta property="og:url" content="https://thqcyberdivision.github.io/services.html">
+  <meta property="og:image" content="https://thqcyberdivision.github.io/logo.png">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="THQ Cyber Division - Threat Intelligence & Secure Services">
+  <meta name="twitter:description" content="Professional CTI, rapid IR advisory, malware analysis, secure dedicated hosts & instances and custom software development.">
+  <meta name="twitter:image" content="https://thqcyberdivision.github.io/logo.png">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "THQ Cyber Division Unincorporated",
+    "url": "https://thqcyberdivision.github.io/",
+    "logo": "https://thqcyberdivision.github.io/logo.png",
+    "description": "Professional cyber threat intelligence services, secure Dedicated Hosts & Dedicated Instances rentals and custom software development for security operations and research.",
+    "sameAs": ["https://github.com/thqcyberdivision"],
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Customer Support",
+      "email": "thqcs@protonmail.com",
+      "areaServed": "Worldwide",
+      "availableLanguage": ["English"]
+    }
+  }
+  </script>
+
+  <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
+  <meta name="theme-color" content="#007bff">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
 
   <style>
     :root {
@@ -265,6 +303,10 @@
     <a href="#" class="btn snipcart-checkout">🛒 View Cart</a>
   </div>
 
-  <div hidden id="snipcart" data-api-key="ZDA4ZjAzN2MtNGJkMS00NThjLWI0NjQtYzU2MWM0MGYxMjNjNjM4ODc3Njk2MjU1Mzg3MzU1" data-config-modal-style="side"></div>
+<!-- Snipcart container -->
+<div hidden id="snipcart" data-api-key="ZDA4ZjAzN2MtNGJkMS00NThjLWI0NjQtYzU2MWM0MGYxMjNjNjM4ODc3Njk2MjU1Mzg3MzU1"></div>
+
+<!-- Snipcart JS -->
+<script src="https://cdn.snipcart.com/themes/v3.3.0/default/snipcart.js"></script>
 </body>
 </html>
