--- a/services.html
+++ b/services.html
@@ -299,6 +299,25 @@
   </button>
 </div>
 
+<!-- Software License Keys -->
+<article class="card reveal" aria-labelledby="cs-title">
+  <div class="icon" aria-hidden="true">🔑</div>
+  <h3 id="cs-title">Software License Keys</h3>
+  <img src="https://cdn.pixabay.com/photo/2016/10/09/16/01/activation-key-1727073_1280.jpg" 
+       alt="Software License Keys" 
+       style="width:100%;border-radius:10px;margin:10px 0;">
+  <p>Purchase verified software license keys for leading productivity, creative, and cybersecurity tools. Licenses are perpetual where available and securely delivered after manual verification.</p>
+  <ul>
+    <li>Perpetual and renewable license options</li>
+    <li>Authentic keys sourced from trusted distributors</li>
+    <li>Manual verification before delivery for security assurance</li>
+  </ul>
+  <div class="meta">
+    <span style="margin-right:10px;color:var(--muted)">Delivery: 24–72 hours after verification</span>
+    <a class="btn" href="mailto:thqcs@protonmail.com?subject=Software License Key Inquiry">Request License</a>
+  </div>
+</article>
+
 
   </section>
   </main>
