--- a/services.html
+++ b/services.html
@@ -284,7 +284,7 @@
 <div class="card">
   <h3>Dedicated Instance - 16 vCPU</h3>
   <p>High-CPU instance, 16 vCPU, 64GB RAM, 2x300GB NVMe</p>
-  <img src="https://cdn.pixabay.com/photo/2022/07/21/09/12/offshore-dedicated-hosting-7335768_1280.pngg" alt="16vCPU Instance" />
+  <img src="https://cdn.pixabay.com/photo/2022/07/21/09/12/offshore-dedicated-hosting-7335768_1280.png" alt="16vCPU Instance" />
   <span class="badge">From $637.73/mo</span>
   <button class="btn snipcart-add-item"
     data-item-id="di-16v"
