--- a/services.html
+++ b/services.html
@@ -300,96 +300,92 @@
 </div>
 
 
-<!-- THQ Cyber WAF Services -->
-<article class="card reveal" aria-labelledby="waf-title">
-  <div class="icon" aria-hidden="true">🛡️</div>
-  <h3 id="waf-title">THQ Cyber WAF — Web Application Firewall</h3>
+<!-- THQ Cyber WAF Starter -->
+<div class="card">
+  <h3>THQ Cyber WAF — Starter</h3>
+  <img src="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png" 
+       alt="THQ Cyber WAF Starter" 
+       style="width:100%;border-radius:10px;margin:10px 0;">
   <p>
-    <strong>Secure your web applications</strong> with <b>THQ Cyber WAF</b>. 
-    Protect against attacks such as SQL injection, XSS, and DDoS attempts. 
-    Manage and customize access rules effortlessly, while benefiting from 
-    automated managed rule groups designed for modern business infrastructures.
+    Basic protection with <strong>1 Web ACL</strong> and <strong>5 Rules</strong>. 
+    Perfect for small sites and individual developers who need essential WAF coverage.
   </p>
+  <ul>
+    <li>1 Web ACL</li>
+    <li>5 Custom Rules</li>
+    <li>No Managed Rule Groups</li>
+  </ul>
+  <span class="badge">From $50/mo</span>
+  <button class="btn snipcart-add-item"
+    data-item-id="waf-starter"
+    data-item-name="THQ Cyber WAF Starter"
+    data-item-price="50"
+    data-item-url="services.html"
+    data-item-description="THQ Cyber WAF Starter — 1 Web ACL, 5 Rules, no managed rule groups"
+    data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
+    data-item-custom1-name="Setup Type"
+    data-item-custom1-options="Standard Setup|Advanced Setup[+80.00]">
+    Add to cart
+  </button>
+</div>
 
-  <div class="catalog">
-    <!-- Starter Package -->
-    <div class="card" style="background:#fff;">
-      <span class="badge">Starter Package</span>
-      <h3>THQ Cyber WAF Starter</h3>
-      <p>Basic protection with 1 Web ACL and 5 Rules. Ideal for small sites or personal projects.</p>
-      <ul>
-        <li>1 Web ACL</li>
-        <li>5 Custom Rules</li>
-        <li>No Managed Rule Groups</li>
-      </ul>
-      <span class="badge">From $50/mo</span>
-      <button class="btn snipcart-add-item"
-        data-item-id="waf-starter"
-        data-item-name="THQ Cyber WAF Starter"
-        data-item-price="50"
-        data-item-url="services.html"
-        data-item-description="THQ Cyber WAF Starter — 1 Web ACL, 5 Rules, no managed rule groups"
-        data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
-        data-item-custom1-name="Setup Type"
-        data-item-custom1-options="Standard Setup|Advanced Setup[+80.00]">
-        Add to cart
-      </button>
-    </div>
-
-    <!-- Business Package -->
-    <div class="card" style="background:#fff;">
-      <span class="badge">Business Package</span>
-      <h3>THQ Cyber WAF Business</h3>
-      <p>Enhanced protection with 2 Web ACLs, 10 Rules, and 1 Managed Rule Group. Ideal for SMEs.</p>
-      <ul>
-        <li>2 Web ACLs</li>
-        <li>10 Custom Rules</li>
-        <li>1 Managed Rule Group</li>
-      </ul>
-      <span class="badge">From $150/mo</span>
-      <button class="btn snipcart-add-item"
-        data-item-id="waf-business"
-        data-item-name="THQ Cyber WAF Business"
-        data-item-price="150"
-        data-item-url="services.html"
-        data-item-description="THQ Cyber WAF Business — 2 Web ACLs, 10 Rules, 1 Managed Rule Group"
-        data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
-        data-item-custom1-name="Setup Type"
-        data-item-custom1-options="Standard Setup|Advanced Setup[+100.00]">
-        Add to cart
-      </button>
-    </div>
-
-    <!-- Enterprise Package -->
-    <div class="card" style="background:#fff;">
-      <span class="badge">Enterprise Package</span>
-      <h3>THQ Cyber WAF Enterprise</h3>
-      <p>Comprehensive enterprise-grade protection with 5 Web ACLs, 20 Rules, and 3 Managed Rule Groups.</p>
-      <ul>
-        <li>5 Web ACLs</li>
-        <li>20 Custom Rules</li>
-        <li>3 Managed Rule Groups</li>
-      </ul>
-      <span class="badge">From $300/mo</span>
-      <button class="btn snipcart-add-item"
-        data-item-id="waf-enterprise"
-        data-item-name="THQ Cyber WAF Enterprise"
-        data-item-price="300"
-        data-item-url="services.html"
-        data-item-description="THQ Cyber WAF Enterprise — 5 Web ACLs, 20 Rules, 3 Managed Rule Groups"
-        data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
-        data-item-custom1-name="Setup Type"
-        data-item-custom1-options="Standard Setup|Advanced Setup[+150.00]">
-        Add to cart
-      </button>
-    </div>
-  </div>
-
-  <p style="color:var(--muted);margin-top:10px;">
-    <strong>Optional Setup Fee:</strong> $80–$150 one-time configuration cost based on setup type.<br>
-    <strong>Usage-Based Pricing:</strong> $0.60 per million requests after included thresholds.
+<!-- THQ Cyber WAF Business -->
+<div class="card">
+  <h3>THQ Cyber WAF — Business</h3>
+  <img src="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png" 
+       alt="THQ Cyber WAF Business"
+       style="width:100%;border-radius:10px;margin:10px 0;">
+  <p>
+    Enhanced protection for SMBs and developers managing multiple web properties. 
+    Includes <strong>2 Web ACLs</strong>, <strong>10 Rules</strong>, and <strong>1 Managed Rule Group</strong>.
   </p>
-</article>
+  <ul>
+    <li>2 Web ACLs</li>
+    <li>10 Custom Rules</li>
+    <li>1 Managed Rule Group</li>
+  </ul>
+  <span class="badge">From $150/mo</span>
+  <button class="btn snipcart-add-item"
+    data-item-id="waf-business"
+    data-item-name="THQ Cyber WAF Business"
+    data-item-price="150"
+    data-item-url="services.html"
+    data-item-description="THQ Cyber WAF Business — 2 Web ACLs, 10 Rules, 1 Managed Rule Group"
+    data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
+    data-item-custom1-name="Setup Type"
+    data-item-custom1-options="Standard Setup|Advanced Setup[+100.00]">
+    Add to cart
+  </button>
+</div>
+
+<!-- THQ Cyber WAF Enterprise -->
+<div class="card">
+  <h3>THQ Cyber WAF — Enterprise</h3>
+  <img src="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png" 
+       alt="THQ Cyber WAF Enterprise"
+       style="width:100%;border-radius:10px;margin:10px 0;">
+  <p>
+    Comprehensive web application protection for large-scale deployments. 
+    Includes <strong>5 Web ACLs</strong>, <strong>20 Rules</strong>, and <strong>3 Managed Rule Groups</strong>.
+  </p>
+  <ul>
+    <li>5 Web ACLs</li>
+    <li>20 Custom Rules</li>
+    <li>3 Managed Rule Groups</li>
+  </ul>
+  <span class="badge">From $300/mo</span>
+  <button class="btn snipcart-add-item"
+    data-item-id="waf-enterprise"
+    data-item-name="THQ Cyber WAF Enterprise"
+    data-item-price="300"
+    data-item-url="services.html"
+    data-item-description="THQ Cyber WAF Enterprise — 5 Web ACLs, 20 Rules, 3 Managed Rule Groups"
+    data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
+    data-item-custom1-name="Setup Type"
+    data-item-custom1-options="Standard Setup|Advanced Setup[+150.00]">
+    Add to cart
+  </button>
+</div>
 
 
 <!-- Software License Keys -->
