--- a/services.html
+++ b/services.html
@@ -303,9 +303,6 @@
 <!-- THQ Cyber WAF Starter -->
 <div class="card">
   <h3>THQ Cyber WAF — Starter</h3>
-  <img src="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png" 
-       alt="THQ Cyber WAF Starter" 
-       style="width:100%;border-radius:10px;margin:10px 0;">
   <p>
     Basic protection with <strong>1 Web ACL</strong> and <strong>5 Rules</strong>. 
     Perfect for small sites and individual developers who need essential WAF coverage.
@@ -322,7 +319,7 @@
     data-item-price="50"
     data-item-url="services.html"
     data-item-description="THQ Cyber WAF Starter — 1 Web ACL, 5 Rules, no managed rule groups"
-    data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
+    data-item-image="https://cdn.pixabay.com/photo/2022/04/08/12/35/cybersecurity-7119389_1280.jpg"
     data-item-custom1-name="Setup Type"
     data-item-custom1-options="Standard Setup|Advanced Setup[+80.00]">
     Add to cart
@@ -332,9 +329,6 @@
 <!-- THQ Cyber WAF Business -->
 <div class="card">
   <h3>THQ Cyber WAF — Business</h3>
-  <img src="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png" 
-       alt="THQ Cyber WAF Business"
-       style="width:100%;border-radius:10px;margin:10px 0;">
   <p>
     Enhanced protection for SMBs and developers managing multiple web properties. 
     Includes <strong>2 Web ACLs</strong>, <strong>10 Rules</strong>, and <strong>1 Managed Rule Group</strong>.
@@ -351,7 +345,7 @@
     data-item-price="150"
     data-item-url="services.html"
     data-item-description="THQ Cyber WAF Business — 2 Web ACLs, 10 Rules, 1 Managed Rule Group"
-    data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
+    data-item-image="https://cdn.pixabay.com/photo/2022/11/12/10/25/sign-7586686_1280.jpg"
     data-item-custom1-name="Setup Type"
     data-item-custom1-options="Standard Setup|Advanced Setup[+100.00]">
     Add to cart
@@ -361,11 +355,7 @@
 <!-- THQ Cyber WAF Enterprise -->
 <div class="card">
   <h3>THQ Cyber WAF — Enterprise</h3>
-  <img src="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png" 
-       alt="THQ Cyber WAF Enterprise"
-       style="width:100%;border-radius:10px;margin:10px 0;">
-  <p>
-    Comprehensive web application protection for large-scale deployments. 
+<p>    Comprehensive web application protection for large-scale deployments. 
     Includes <strong>5 Web ACLs</strong>, <strong>20 Rules</strong>, and <strong>3 Managed Rule Groups</strong>.
   </p>
   <ul>
@@ -380,7 +370,7 @@
     data-item-price="300"
     data-item-url="services.html"
     data-item-description="THQ Cyber WAF Enterprise — 5 Web ACLs, 20 Rules, 3 Managed Rule Groups"
-    data-item-image="https://cdn.pixabay.com/photo/2022/06/13/10/02/firewall-7259093_1280.png"
+    data-item-image="https://cdn.pixabay.com/photo/2022/04/08/12/37/cybersecurity-7119401_1280.jpg"
     data-item-custom1-name="Setup Type"
     data-item-custom1-options="Standard Setup|Advanced Setup[+150.00]">
     Add to cart
