--- a/services.html
+++ b/services.html
@@ -303,6 +303,9 @@
 <!-- THQ Cyber WAF Starter -->
 <div class="card">
   <h3>THQ Cyber WAF — Starter</h3>
+	 <img src="https://cdn.pixabay.com/photo/2022/04/08/12/35/cybersecurity-7119389_1280.jpg" 
+       alt="THQ Cyber WAF Starter" 
+       style="width:100%;border-radius:10px;margin:10px 0;">
   <p>
     Basic protection with <strong>1 Web ACL</strong> and <strong>5 Rules</strong>. 
     Perfect for small sites and individual developers who need essential WAF coverage.
@@ -329,6 +332,9 @@
 <!-- THQ Cyber WAF Business -->
 <div class="card">
   <h3>THQ Cyber WAF — Business</h3>
+	<img src="https://cdn.pixabay.com/photo/2022/11/12/10/25/sign-7586686_1280.jpg" 
+       alt="THQ Cyber WAF Business"
+       style="width:100%;border-radius:10px;margin:10px 0;">
   <p>
     Enhanced protection for SMBs and developers managing multiple web properties. 
     Includes <strong>2 Web ACLs</strong>, <strong>10 Rules</strong>, and <strong>1 Managed Rule Group</strong>.
@@ -355,6 +361,9 @@
 <!-- THQ Cyber WAF Enterprise -->
 <div class="card">
   <h3>THQ Cyber WAF — Enterprise</h3>
+	 <img src="https://cdn.pixabay.com/photo/2022/04/08/12/37/cybersecurity-7119401_1280.jpg" 
+       alt="THQ Cyber WAF Enterprise"
+       style="width:100%;border-radius:10px;margin:10px 0;">
 <p>    Comprehensive web application protection for large-scale deployments. 
     Includes <strong>5 Web ACLs</strong>, <strong>20 Rules</strong>, and <strong>3 Managed Rule Groups</strong>.
   </p>
