--- a/services.html
+++ b/services.html
@@ -385,6 +385,44 @@
     Add to cart
   </button>
 </div>
+<!-- Elastic VMware Service – 4 Instances -->
+<div class="card">
+  <h3>Elastic VMware Service – 4 Instances</h3>
+  <p>Pre-configured VMware environment with flexible regional deployment.</p>
+  <img src="https://ipfs.io/ipfs/QmZ9sjfWkVMware4Instances" alt="Elastic VMware 4 Instances" />
+  <span class="badge">From $4,061.72/mo</span>
+  <button class="btn snipcart-add-item"
+    data-item-id="evs-4"
+    data-item-name="Elastic VMware Service – 4 Instances"
+    data-item-price="4061.72"
+    data-item-url="services.html"
+    data-item-description="Elastic VMware Service – 4 Instances, select deployment region"
+    data-item-image="https://ipfs.io/ipfs/QmZ9sjfWkVMware4Instances"
+    data-item-custom1-name="Region"
+    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[+0]">
+    Add to cart
+  </button>
+</div>
+
+<!-- Elastic VMware Service – 8 Instances -->
+<div class="card">
+  <h3>Elastic VMware Service – 8 Instances</h3>
+  <p>Enterprise-grade VMware deployment for demanding workloads.</p>
+  <img src="https://cdn.pixabay.com/photo/2021/09/10/18/49/secretary-6613931_1280.jpg" alt="Elastic VMware 8 Instances" />
+  <span class="badge">From $8,123.44/mo</span>
+  <button class="btn snipcart-add-item"
+    data-item-id="evs-8"
+    data-item-name="Elastic VMware Service – 8 Instances"
+    data-item-price="8123.44"
+    data-item-url="services.html"
+    data-item-description="Elastic VMware Service – 8 Instances, select deployment region"
+    data-item-image="https://cdn.pixabay.com/photo/2021/09/10/18/49/secretary-6613931_1280.jpg"
+    data-item-custom1-name="Region"
+    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[+0]">
+    Add to cart
+  </button>
+</div>
+
 
 
 <!-- Software License Keys -->
