--- a/services.html
+++ b/services.html
@@ -389,7 +389,7 @@
 <div class="card">
   <h3>Elastic VMware Service – 4 Instances</h3>
   <p>Pre-configured VMware environment with flexible regional deployment.</p>
-  <img src="https://ipfs.io/ipfs/QmZ9sjfWkVMware4Instances" alt="Elastic VMware 4 Instances" />
+  <img src="https://cdn.pixabay.com/photo/2017/01/20/17/26/operating-system-1995434_1280.png" alt="Elastic VMware 4 Instances" />
   <span class="badge">From $4,061.72/mo</span>
   <button class="btn snipcart-add-item"
     data-item-id="evs-4"
@@ -397,7 +397,7 @@
     data-item-price="4061.72"
     data-item-url="services.html"
     data-item-description="Elastic VMware Service – 4 Instances, select deployment region"
-    data-item-image="https://ipfs.io/ipfs/QmZ9sjfWkVMware4Instances"
+    data-item-image="https://cdn.pixabay.com/photo/2017/01/20/17/26/operating-system-1995434_1280.png"
     data-item-custom1-name="Region"
     data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[+0]">
     Add to cart
