--- a/services.html
+++ b/services.html
@@ -399,7 +399,7 @@
     data-item-description="Elastic VMware Service – 4 Instances, select deployment region"
     data-item-image="https://cdn.pixabay.com/photo/2017/01/20/17/26/operating-system-1995434_1280.png"
     data-item-custom1-name="Region"
-    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[+0]">
+    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[-10]">
     Add to cart
   </button>
 </div>
@@ -418,14 +418,14 @@
     data-item-description="Elastic VMware Service – 8 Instances, select deployment region"
     data-item-image="https://cdn.pixabay.com/photo/2021/09/10/18/49/secretary-6613931_1280.jpg"
     data-item-custom1-name="Region"
-    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[+0]">
+    data-item-custom1-options="Paris[+0]|London[+0]|Tokyo[+0]|USA[-10]">
     Add to cart
   </button>
 </div>
 
 
 
-<!-- Software License Keys -->
+<!-- Software License Keys
 <article class="card reveal" aria-labelledby="cs-title">
   <div class="icon" aria-hidden="true">🔑</div>
   <h3 id="cs-title">Software License Keys</h3>
@@ -443,7 +443,7 @@
     <a class="btn" href="mailto:thqcs@protonmail.com?subject=Software License Key Inquiry">Request License</a>
   </div>
 </article>
-
+ -->
 
   </section>
   </main>
