--- a/blog.html
+++ b/blog.html
@@ -100,6 +100,51 @@
       <button data-category="business-formation">Business Formation</button>
     </section>
     <section class="blog-list" id="blogList">
+
+      <article class="blog-preview" data-category="cybersecurity">
+  <img src="https://cdn.pixabay.com/photo/2012/04/12/13/02/firewall-29940_1280.png?auto=format&fit=crop&w=400&q=80" alt="Web Application Firewall">
+  <div>
+    <h2>Protect Your Web Applications with THQ Cyber WAF</h2>
+    <p class="meta">Posted by THQ Cyber Division Team on November 6th, 2025 | <span class="category">Cybersecurity</span></p>
+    <p class="summary">Web applications face constant threats from attackers. Learn how THQ Cyber WAF offers tailored protection through custom rules, managed rule groups, and traffic filtering to safeguard your business.</p>
+    <button class="read-more">Read More</button>
+    <div class="blog-full-content">
+      <h3>How THQ Cyber WAF Secures Your Applications</h3>
+      <p>THQ Cyber WAF helps businesses of all sizes protect their web applications against attacks such as SQL injection, XSS, and DDoS. With flexible configuration options, you can:</p>
+      <ul>
+        <li>Deploy Starter, Business, or Enterprise packages depending on your security needs</li>
+        <li>Customize Web ACLs and rules for granular protection</li>
+        <li>Integrate managed rule groups for minimal maintenance</li>
+      </ul>
+      <p>Pricing starts from $50/month for basic protection up to $300/month for enterprise-grade solutions. THQ Cyber WAF also offers usage-based pricing for high-traffic applications and optional setup support.</p>
+      <p>Enhance your security posture today. <a href="services.html#thq-waf">Explore WAF Packages</a>.</p>
+    </div>
+  </div>
+</article>
+      <article class="blog-preview" data-category="it-support">
+  <img src="https://cdn.pixabay.com/photo/2022/07/14/05/46/datacenter-7320495_1280.png?auto=format&fit=crop&w=400&q=80" alt="Cloud VMware Deployment">
+  <div>
+    <h2>Maximize Efficiency with Elastic VMware Services</h2>
+    <p class="meta">Posted by THQ Cyber Division Team on November 6th, 2025 | <span class="category">IT Support</span></p>
+    <p class="summary">Discover how THQ Cyber’s Elastic VMware Service allows businesses to deploy virtualized environments quickly and securely, with flexible instance options and regional deployments.</p>
+    <button class="read-more">Read More</button>
+    <div class="blog-full-content">
+      <h3>Elastic VMware Service: Flexible and Scalable Cloud Infrastructure</h3>
+      <p>THQ Cyber Elastic VMware Service offers pre-configured virtual environments with 4 or 8 instances, allowing businesses to scale operations without complex setup. Key benefits include:</p>
+      <ul>
+        <li>Choice of deployment regions: Paris, London, Tokyo, or Ohio</li>
+        <li>Rapid provisioning of secure, high-performance instances</li>
+        <li>Fully managed or self-managed options for operational flexibility</li>
+        <li>Enterprise-level redundancy and performance for mission-critical workloads</li>
+      </ul>
+      <p>Pricing with a 30% markup: 4 Instances from $4,061.72/month, 8 Instances from $8,123.44/month. Ideal for research teams, red teams, and businesses seeking reliable virtual infrastructure.</p>
+      <p>Ready to streamline your cloud deployment? <a href="services.html#elastic-vmware">Learn More & Order</a>.</p>
+    </div>
+  </div>
+</article>
+
+
+      
       <!-- Cybersecurity -->
       <article class="blog-preview" data-category="cybersecurity">
           <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="Cybersecurity Lock">
