--- a/blog.html
+++ b/blog.html
@@ -137,7 +137,7 @@
         <li>Fully managed or self-managed options for operational flexibility</li>
         <li>Enterprise-level redundancy and performance for mission-critical workloads</li>
       </ul>
-      <p>Pricing with a 30% markup: 4 Instances from $4,061.72/month, 8 Instances from $8,123.44/month. Ideal for research teams, red teams, and businesses seeking reliable virtual infrastructure.</p>
+      <p>Pricing: 4 Instances from $4,061.72/month, 8 Instances from $8,123.44/month. Ideal for research teams, red teams, and businesses seeking reliable virtual infrastructure.</p>
       <p>Ready to streamline your cloud deployment? <a href="services.html#elastic-vmware">Learn More & Order</a>.</p>
     </div>
   </div>
