--- a/services.html
+++ b/services.html
@@ -298,6 +298,121 @@
     Add to cart
   </button>
 </div>
+<section class="products-grid">
+
+  <!-- EV CERTIFICATES -->
+  <h2>Extended Validation (EV) Certificates</h2>
+
+  <div class="card">
+    <h3>EV Multi-Domain SSL (3 Domains)</h3>
+    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo EV Multi-Domain" />
+    <p><strong>Validation Type:</strong> EV</p>
+    <p><strong>Reissue:</strong> Unlimited</p>
+    <p><strong>Issuance:</strong> 1–5 Days</p>
+    <p><strong>Warranty:</strong> $1,750,000</p>
+    <p><strong>Total Domains:</strong> 3 (2 additional SANs included)</p>
+    <p>Activate your verified company name across up to 250 different domains for maximum visibility and trust.</p>
+    <span class="badge">From $649.99/yr</span>
+    <button class="btn snipcart-add-item"
+      data-item-id="ev-multi"
+      data-item-name="EV Multi-Domain SSL (3 Domains)"
+      data-item-price="649.99"
+      data-item-url="services.html"
+      data-item-description="Extended Validation SSL with 3 domains included, full organization verification, and $1.75M warranty."
+      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      Add to cart
+    </button>
+  </div>
+
+  <div class="card">
+    <h3>EV SSL Certificate</h3>
+    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo EV SSL" />
+    <p><strong>Validation Type:</strong> EV</p>
+    <p><strong>Reissue:</strong> Unlimited</p>
+    <p><strong>Issuance:</strong> 1–5 Days</p>
+    <p><strong>Warranty:</strong> $1,750,000</p>
+    <p><strong>Total Domains:</strong> 1</p>
+    <p>Display your verified company name in the browser bar to enhance customer confidence and trust.</p>
+    <span class="badge">From $279.99/yr</span>
+    <button class="btn snipcart-add-item"
+      data-item-id="ev-simple"
+      data-item-name="EV SSL Certificate"
+      data-item-price="279.99"
+      data-item-url="services.html"
+      data-item-description="Extended Validation SSL with company name in browser bar and $1.75M warranty."
+      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      Add to cart
+    </button>
+  </div>
+
+  <!-- OV CERTIFICATES -->
+  <h2>Organization Validation (OV) Certificates</h2>
+
+  <div class="card">
+    <h3>OV Wildcard SSL</h3>
+    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo OV Wildcard" />
+    <p><strong>Validation Type:</strong> OV</p>
+    <p><strong>Reissue:</strong> Unlimited</p>
+    <p><strong>Issuance:</strong> 1–3 Days</p>
+    <p><strong>Warranty:</strong> $1,000,000</p>
+    <p><strong>Total Domains:</strong> 1 (Wildcard)</p>
+    <p>Secure your entire domain, including all subdomains, with a single certificate. Ideal for businesses and internal networks.</p>
+    <span class="badge">From $879.99/yr</span>
+    <button class="btn snipcart-add-item"
+      data-item-id="ov-wildcard"
+      data-item-name="OV Wildcard SSL"
+      data-item-price="879.99"
+      data-item-url="services.html"
+      data-item-description="Organization Validated Wildcard SSL with full business verification and $1M warranty."
+      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      Add to cart
+    </button>
+  </div>
+
+  <div class="card">
+    <h3>OV Multi-Domain SSL (3 Domains)</h3>
+    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo OV Multi-Domain" />
+    <p><strong>Validation Type:</strong> OV</p>
+    <p><strong>Reissue:</strong> Unlimited</p>
+    <p><strong>Issuance:</strong> 1–3 Days</p>
+    <p><strong>Warranty:</strong> $1,000,000</p>
+    <p><strong>Total Domains:</strong> 3 (2 additional SANs included)</p>
+    <p>The ideal SSL/TLS certificate for intranets, multi-domain environments, and secure backend connections.</p>
+    <span class="badge">From $499.99/yr</span>
+    <button class="btn snipcart-add-item"
+      data-item-id="ov-multi"
+      data-item-name="OV Multi-Domain SSL (3 Domains)"
+      data-item-price="499.99"
+      data-item-url="services.html"
+      data-item-description="Organization Validated SSL with 3 domains, secure for business and internal connections."
+      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      Add to cart
+    </button>
+  </div>
+
+  <div class="card">
+    <h3>OV SSL Certificate</h3>
+    <img src="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png" alt="Sectigo OV SSL" />
+    <p><strong>Validation Type:</strong> OV</p>
+    <p><strong>Reissue:</strong> Unlimited</p>
+    <p><strong>Issuance:</strong> 1–3 Days</p>
+    <p><strong>Warranty:</strong> $1,000,000</p>
+    <p><strong>Total Domains:</strong> 1</p>
+    <p>Ideal for verified business websites and secured internal communications behind firewalls.</p>
+    <span class="badge">From $179.00/yr</span>
+    <button class="btn snipcart-add-item"
+      data-item-id="ov-simple"
+      data-item-name="OV SSL Certificate"
+      data-item-price="179.00"
+      data-item-url="services.html"
+      data-item-description="Organization Validated SSL for business and internal use, $1M warranty included."
+      data-item-image="https://seeklogo.com/images/S/sectigo-logo-AB294B35C8-seeklogo.com.png">
+      Add to cart
+    </button>
+  </div>
+
+</section>
+
 
 
 <!-- THQ Cyber WAF Starter -->
